# cennznet

./: .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE_TEMPLATE  Makefile  README.md  a.txt  address-mapping.md  build.rs  build.sh  dev.json  docker-compose.override.yml  docker-compose.yml  init.sh  nikau-reboot-investigation.md  update-progress.md  update.sh
cli/: Cargo.toml  build.rs
cli/inspect/: Cargo.toml
cli/inspect/src/: cli.rs  command.rs  lib.rs
cli/rpc-core/txpool/: Cargo.toml
cli/src/: chain_spec.rs  cli.rs  command.rs  factory_impl.rs  lib.rs  main.rs  rpc.rs  service.rs
cli/src/chain_spec/: azalea.rs  dev.rs  genesis_config.rs  kauri.rs  mod.rs  nikau.rs  rata.rs  rimu.rs
cli/src/rpc/txpool/: Cargo.toml
crml/attestation/: Cargo.toml
crml/attestation/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
crml/cennzx/: Cargo.toml
crml/cennzx-spot/: Cargo.toml
crml/cennzx-spot/rpc/: Cargo.toml
crml/cennzx-spot/rpc/runtime-api/: Cargo.toml
crml/cennzx-spot/rpc/src/: lib.rs
crml/cennzx-spot/src/: exchange.rs  impls.rs  lib.rs  liquidity.rs  mock.rs  price.rs  tests.rs  traits.rs  types.rs  util.rs
crml/cennzx/rpc/: Cargo.toml
crml/cennzx/rpc/runtime-api/: Cargo.toml
crml/cennzx/rpc/src/: lib.rs
crml/cennzx/src/: benchmarking.rs  default_weights.rs  impls.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
crml/dex/: Cargo.toml
crml/dex/src/: lib.rs  mock.rs  tests.rs  weights.rs
crml/erc20-peg/: Cargo.toml  README.md  deposit.js  hardhat.config.js  package.json  waffle.json
crml/erc20-peg/contracts/: CENNZnetBridge.sol  ERC20Peg.sol  TestToken.sol
crml/erc20-peg/src/: lib.rs  mock.rs  test.rs  tests.rs  types.rs
crml/erc20-shim/: Cargo.toml  README.md
crml/erc20-shim/src/: lib.rs
crml/eth-bridge/: .gitignore  Cargo.toml  README.md  deploy.js  geth-up.sh  package.json  token-list.json  tokens.csv  tokens.txt
crml/eth-bridge/contracts/: CENNZnetBridge.sol  CENNZnetBridge2.sol  bridge-scenario.json  bridge.sol
crml/eth-bridge/interfaces/: Ownable.sol
crml/eth-bridge/libraries/: SafeMath.sol
crml/eth-bridge/src/: impls.rs  lib.rs  mock.rs  tests.rs  types.rs
crml/eth-bridge/test/: bridge.test.ts  mocha.opts
crml/eth-state-oracle/: Cargo.toml  TODO.md  out.rs
crml/eth-state-oracle/src/: lib.rs  mock.rs  tests.rs  types.rs
crml/eth-wallet/: Cargo.toml
crml/eth-wallet/rpc/: Cargo.toml
crml/eth-wallet/rpc/runtime-api/: Cargo.toml
crml/eth-wallet/rpc/src/: lib.rs  types.rs
crml/eth-wallet/src/: ethereum.rs  lib.rs
crml/generic-asset/: Cargo.toml
crml/generic-asset/rpc/: Cargo.toml
crml/generic-asset/rpc/runtime-api/: Cargo.toml
crml/generic-asset/rpc/src/: lib.rs
crml/generic-asset/src/: benchmarking.rs  imbalances.rs  impls.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
crml/governance/: Cargo.toml
crml/governance/rpc/: Cargo.toml
crml/governance/rpc/runtime-api/: Cargo.toml
crml/governance/rpc/src/: lib.rs
crml/governance/src/: lib.rs  mock.rs  tests.rs  types.rs
crml/nft/: Cargo.toml
crml/nft/rpc/: Cargo.toml
crml/nft/rpc/runtime-api/: Cargo.toml
crml/nft/rpc/src/: lib.rs
crml/nft/src/: benchmarking.rs  default_weights.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
crml/rewards/: Cargo.toml
crml/rewards/src/: lib.rs  mock.rs  tests.rs
crml/scaling/: Cargo.toml
crml/scaling/src/: lib.rs
crml/scaling/tests/: mock.rs  tests.rs
crml/snake/: Cargo.toml
crml/snake/src/: lib.rs  mock.rs  tests.rs  types.rs
crml/staking/: Cargo.toml
crml/staking/reward-curve/: Cargo.toml
crml/staking/reward-curve/src/: lib.rs  log.rs
crml/staking/reward-curve/tests/: test.rs
crml/staking/rpc/: Cargo.toml  README.md
crml/staking/rpc/runtime-api/: Cargo.toml  README.md
crml/staking/rpc/src/: lib.rs
crml/staking/src/: default_weights.rs  inflation.rs  lib.rs  migration.rs  mock.rs  multi_token_economy_tests.rs  offchain_election.rs  slashing.rs  tests.rs
crml/staking/src/rewards/: benchmarking.rs  default_weights.rs  inflation.rs  migration.rs  mod.rs  types.rs
crml/support/: Cargo.toml
crml/support/src/: lib.rs
crml/sylo/: Cargo.toml
crml/sylo/src/: benchmarking.rs  device.rs  e2ee.rs  inbox.rs  lib.rs  migration.rs  mock.rs  payment.rs  response.rs  vault.rs
crml/sylo/src/e2ee/: mod.rs  (+2 more)
crml/token-approvals/: Cargo.toml
crml/token-approvals/src/: lib.rs  mock.rs  tests.rs
ethy-gadget/: Cargo.toml  README.md
ethy-gadget/rpc/: Cargo.toml
ethy-gadget/rpc/src/: lib.rs  notification.rs
ethy-gadget/src/: commitment.rs  error.rs  gossip.rs  keystore.rs  lib.rs  metrics.rs  notification.rs  primitives.rs  round.rs  testing.rs  witness.rs  witness_record.rs  worker.rs
executor/: Cargo.toml
executor/benches/: bench.rs
executor/src/: lib.rs
executor/tests/: basic.rs  common.rs  fees.rs  submit_transaction.rs
primitives/: Cargo.toml
primitives/src/: cennznet_extrinsic.rs  doughnut.rs  eth.rs  impls.rs  lib.rs  traits.rs  txpool.rs  types.rs  util.rs
rpc/: Cargo.toml
rpc-client/: Cargo.toml
rpc-client/src/: main.rs
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: cennznet_extrinsic.rs  constants.rs  doughnut.rs  fee.rs  impls.rs  legacy_host_functions.rs  lib.rs  precompiles.rs  runner.rs
runtime/src/weights/: crml_cennzx.rs  crml_nft.rs  crml_sylo.rs  mod.rs
runtime/tests/: codec.rs  doughnut.rs  evm_fee_preferences.rs  evm_precompiles.rs  evm_precompiles_cennzx.rs  evm_precompiles_erc20.rs  evm_precompiles_erc20_peg.rs  evm_precompiles_erc721.rs  evm_precompiles_fee_payment.rs  evm_precompiles_nft.rs  extrinsic_extension.rs  fee.rs  mock.rs  mod.rs  staking_reward.rs  state_oracle.rs  sylo_integrated_fee_payment.rs  tests.rs
runtime/tests/common/: helpers.rs  keyring.rs  mock.rs  mod.rs  precompiles_builder.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
testing/: Cargo.toml
testing/benches/: import.rs
testing/src/: bench.rs  client.rs  genesis.rs  keyring.rs  lib.rs
transaction-factory/: Cargo.toml
(+178 files in other folders)
