[package]
name = "cennznet"
version = "0.9.25-beta"
authors = ["Centrality Developers <support@centrality.ai>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "cennznet"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1.7"
exit-future = "0.1"
hex-literal = "0.2"
slog = "^2"
app_dirs = "1.2"
parity-codec = { version = "3.5.4" }
trie-root = { git = "https://github.com/paritytech/trie" }
sr-io = { path = "../plug-blockchain/core/sr-io" }
sr-primitives = { path = "../plug-blockchain/core/sr-primitives" }
substrate-cli = { path = "../plug-blockchain/core/cli" }
substrate-primitives = { path = "../plug-blockchain/core/primitives" }
substrate-executor = { path = "../plug-blockchain/core/executor" }
substrate-service = { path = "../plug-blockchain/core/service" }
substrate-transaction-pool = { path = "../plug-blockchain/core/transaction-pool" }
substrate-network = { path = "../plug-blockchain/core/network" }
substrate-consensus-aura = { path = "../plug-blockchain/core/consensus/aura" }
substrate-keystore = { path = "../plug-blockchain/core/keystore" }
substrate-client = { path = "../plug-blockchain/core/client", default-features = false }
substrate-consensus-common = { path = "../plug-blockchain/core/consensus/common" }
substrate-finality-grandpa = { path = "../plug-blockchain/core/finality-grandpa" }
substrate-basic-authorship = { path = "../plug-blockchain/core/basic-authorship" }
substrate-inherents = { path = "../plug-blockchain/core/inherents" }
substrate-telemetry = { path = "../plug-blockchain/core/telemetry" }
srml-grandpa = { path = "../plug-blockchain/srml/grandpa" }
structopt = "0.2.13"
cennznet-runtime = { path = "runtime" }
cennznet-primitives = { path = "primitives" }
generic-asset = { package = "prml-generic-asset", path = "prml/generic-asset" }
fees = { package = "prml-fees", path = "prml/fees" }

[build-dependencies]
vergen = "2"

[workspace]
members = [ "runtime", "primitives", "crml/*", "prml/*" ]
exclude = [ "runtime/wasm" ]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
