[package]
name = "cennznet-cli"
version = "2.2.0-rc4"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "CENNZnet node implementation in Rust."
edition = "2021"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.2"
log = "0.4"
serde = { version = "1.0.126", features = ["derive"] }
clap = { version = "3.1", features = [ "derive" ] }
url = "2.2.2"

serde_json = "1.0"
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", features = [ "wasmtime" ] }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

# These dependencies are used for the node RPCs
jsonrpsee = { version = "0.13.0", default-features = false, features = [ "macros", "server" ] }
node-inspect = { version = "0.9.0-dev", path = "./inspect" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

# cennznet dependencies
cennznet-primitives = { path = "../primitives" }
cennznet-runtime = { path = "../runtime" }
cennznet-rpc-core-txpool = { path = "rpc-core/txpool" }
cennznet-rpc-txpool = { path = "./src/rpc/txpool" }
crml-eth-bridge = { path = "../crml/eth-bridge" }
# cennznet custom RPCs
crml-cennzx-rpc = { path = "../crml/cennzx/rpc" }
crml-generic-asset = { path = "../crml/generic-asset" }
crml-generic-asset-rpc = { path = "../crml/generic-asset/rpc" }
crml-governance-rpc = { path = "../crml/governance/rpc" }
crml-nft-rpc = { path = "../crml/nft/rpc" }
crml-staking-rpc = { path = "../crml/staking/rpc" }
crml-support = { path = "../crml/support" }
crml-transaction-payment-rpc = { path = "../crml/transaction-payment/rpc" }
crml-transaction-payment = { path = "../crml/transaction-payment" }
ethy-gadget = { path = "../ethy-gadget" }
ethy-gadget-rpc = { path = "../ethy-gadget/rpc" }

pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
pallet-evm = { git = "https://github.com/cennznet/frontier", branch = "polkadot-v0.9.23", version = "6.0.0-dev" }
fc-db = { git = "https://github.com/cennznet/frontier", branch = "polkadot-v0.9.23" }
fc-mapping-sync = { git = "https://github.com/cennznet/frontier", branch = "polkadot-v0.9.23" }
fc-rpc = { git = "https://github.com/cennznet/frontier", branch = "polkadot-v0.9.23", features = [ "rpc_binary_search_estimate" ] }
fc-rpc-core = { git = "https://github.com/cennznet/frontier", branch = "polkadot-v0.9.23" }
fp-rpc = { git = "https://github.com/cennznet/frontier", branch = "polkadot-v0.9.23" }
fp-storage = { git = "https://github.com/cennznet/frontier", branch = "polkadot-v0.9.23" }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
tempfile = "3.1.0"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

[features]
default = []
# Uses integration test config for quicker staking eras + epochs
quick_staking = [
	"cennznet-runtime/integration_config"
]
runtime-benchmarks = [
	"cennznet-runtime/runtime-benchmarks",
]