[package]
name = "ethy-gadget"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Centrality Devleopers <support@centrality.ai>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
futures = "0.3.2"
hex = "0.4"
log = "0.4"
parking_lot = "0.12.1"
thiserror = "1.0"

codec = { version = "3.0.0", package = "parity-scale-codec", features = ["derive"] }
libsecp256k1 = { version = "0.6.0" }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", version = "0.10.0-dev"}

cennznet-primitives = { path = "../primitives" }
crml-support = { path = "../crml/support" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

[dev-dependencies]
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", version = "0.8.0" }
hex-literal = "*"
strum = { version = "0.23", features = ["derive"] }